# rdflib-endpoint

./: pyproject.toml
src/rdflib_endpoint/: sparql_router.py
tests/: test_rdflib_endpoint.py
