[tool.poetry]
name = "rdflib-endpoint"
version = "0.1.0"
description = ""
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"
packages = [{include = "rdflib_endpoint", from="src"}]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "*"
requests = "*"
httpx = "*"
click = "*"
oxrdflib = "*"
rdflib = "*"
fastapi = "*"
uvicorn = "*"
exceptiongroup = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
